--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,3 +5,21 @@
   align-items: center;
   min-height: 100vh;
 }
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.925);
+  color: rgb(255, 255, 255);
+  height: 70px;
+  font-size: 1.5rem;
+}
+
+.header > img {
+  display: block;
+}
+
+.separator {
+  margin: 0 8px 0 8px;
+}
