--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -23,3 +23,12 @@
 .separator {
   margin: 0 8px 0 8px;
 }
+
+.footer {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.925);
+  height: 70px;
+}
