--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -36,3 +36,36 @@
   height: 70px;
   font-size: small;
 }
+
+.graphContainer {
+  position: relative;
+  min-height: 300px;
+}
+
+.loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  pointer-events: none;
+
+  backdrop-filter: blur(0);
+  background-color: transparent;
+  visibility: hidden;
+
+  transition: backdrop-filter 150ms ease-out, background-color 150ms ease-out;
+}
+
+.loader.show {
+  backdrop-filter: blur(2px);
+  background-color: rgba(0 0 0 / 10%);
+  visibility: visible;
+
+  pointer-events: initial;
+}
